--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,107 +1,218 @@
 :root {
-  --max-width: 1100px;
-  --border-radius: 12px;
-  --font-mono: ui-monospace, Menlo, Monaco, 'Cascadia Mono', 'Segoe UI Mono',
-    'Roboto Mono', 'Oxygen Mono', 'Ubuntu Monospace', 'Source Code Pro',
-    'Fira Mono', 'Droid Sans Mono', 'Courier New', monospace;
+	--max-width: 1100px;
+	--border-radius: 12px;
+	--font-mono: ui-monospace, Menlo, Monaco, 'Cascadia Mono', 'Segoe UI Mono', 'Roboto Mono', 'Oxygen Mono',
+		'Ubuntu Monospace', 'Source Code Pro', 'Fira Mono', 'Droid Sans Mono', 'Courier New', monospace;
 
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+	--foreground-rgb: 0, 0, 0;
+	--background-start-rgb: 214, 219, 220;
+	--background-end-rgb: 255, 255, 255;
 
-  --primary-glow: conic-gradient(
-    from 180deg at 50% 50%,
-    #16abff33 0deg,
-    #0885ff33 55deg,
-    #54d6ff33 120deg,
-    #0071ff33 160deg,
-    transparent 360deg
-  );
-  --secondary-glow: radial-gradient(
-    rgba(255, 255, 255, 1),
-    rgba(255, 255, 255, 0)
-  );
+	--primary-glow: conic-gradient(
+		from 180deg at 50% 50%,
+		#16abff33 0deg,
+		#0885ff33 55deg,
+		#54d6ff33 120deg,
+		#0071ff33 160deg,
+		transparent 360deg
+	);
+	--secondary-glow: radial-gradient(rgba(255, 255, 255, 1), rgba(255, 255, 255, 0));
 
-  --tile-start-rgb: 239, 245, 249;
-  --tile-end-rgb: 228, 232, 233;
-  --tile-border: conic-gradient(
-    #00000080,
-    #00000040,
-    #00000030,
-    #00000020,
-    #00000010,
-    #00000010,
-    #00000080
-  );
+	--tile-start-rgb: 239, 245, 249;
+	--tile-end-rgb: 228, 232, 233;
+	--tile-border: conic-gradient(#00000080, #00000040, #00000030, #00000020, #00000010, #00000010, #00000080);
 
-  --callout-rgb: 238, 240, 241;
-  --callout-border-rgb: 172, 175, 176;
-  --card-rgb: 180, 185, 188;
-  --card-border-rgb: 131, 134, 135;
+	--callout-rgb: 238, 240, 241;
+	--callout-border-rgb: 172, 175, 176;
+	--card-rgb: 180, 185, 188;
+	--card-border-rgb: 131, 134, 135;
 }
 
 @media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
+	:root {
+		--foreground-rgb: 255, 255, 255;
+		--background-start-rgb: 0, 0, 0;
+		--background-end-rgb: 0, 0, 0;
 
-    --primary-glow: radial-gradient(rgba(1, 65, 255, 0.4), rgba(1, 65, 255, 0));
-    --secondary-glow: linear-gradient(
-      to bottom right,
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0.3)
-    );
+		--primary-glow: radial-gradient(rgba(1, 65, 255, 0.4), rgba(1, 65, 255, 0));
+		--secondary-glow: linear-gradient(
+			to bottom right,
+			rgba(1, 65, 255, 0),
+			rgba(1, 65, 255, 0),
+			rgba(1, 65, 255, 0.3)
+		);
 
-    --tile-start-rgb: 2, 13, 46;
-    --tile-end-rgb: 2, 5, 19;
-    --tile-border: conic-gradient(
-      #ffffff80,
-      #ffffff40,
-      #ffffff30,
-      #ffffff20,
-      #ffffff10,
-      #ffffff10,
-      #ffffff80
-    );
+		--tile-start-rgb: 2, 13, 46;
+		--tile-end-rgb: 2, 5, 19;
+		--tile-border: conic-gradient(#ffffff80, #ffffff40, #ffffff30, #ffffff20, #ffffff10, #ffffff10, #ffffff80);
 
-    --callout-rgb: 20, 20, 20;
-    --callout-border-rgb: 108, 108, 108;
-    --card-rgb: 100, 100, 100;
-    --card-border-rgb: 200, 200, 200;
-  }
+		--callout-rgb: 20, 20, 20;
+		--callout-border-rgb: 108, 108, 108;
+		--card-rgb: 100, 100, 100;
+		--card-border-rgb: 200, 200, 200;
+	}
 }
 
 * {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
+	box-sizing: border-box;
+	padding: 0;
+	margin: 0;
 }
 
 html,
 body {
-  max-width: 100vw;
-  overflow-x: hidden;
+	max-width: 100vw;
+	overflow-x: hidden;
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+	color: rgb(var(--foreground-rgb));
+	background: linear-gradient(to bottom, transparent, rgb(var(--background-end-rgb))) rgb(var(--background-start-rgb));
 }
 
 a {
-  color: inherit;
-  text-decoration: none;
+	color: inherit;
+	text-decoration: none;
 }
 
 @media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
+	html {
+		color-scheme: dark;
+	}
+}
+
+/* Header styles */
+
+.ant-layout-header {
+	background-color: #ffff;
+}
+.header-user-name {
+	font-size: 16px;
+	font-weight: 500;
+	margin-right: 10px;
+}
+
+/* Home page styles */
+
+.home-header {
+	font-size: 35px;
+	font-weight: 500;
+	font-style: italic;
+}
+.sample-image {
+	height: fit-content;
+	width: fit-content;
+}
+
+/* Questions widget */
+
+.questions-widget-main-card {
+	background-color: #f5f7f9;
+}
+.questions {
+	font-size: 28px;
+	font-weight: 600;
+}
+.required-text {
+	font-size: 15px;
+	font-weight: 500;
+	font-style: italic;
+}
+.answers-widgets {
+	padding: 20px;
+	background-color: #fff;
+	font-size: 18px;
+	font-weight: 500;
+	border: 1px solid #ccd6e0;
+	border-radius: 10px;
+	margin-left: 10px;
+	cursor: pointer;
+}
+
+.answer-label {
+	background-color: #d7d7d7b4;
+	padding: 5px;
+	border-radius: 5px;
+}
+.selected-answer {
+	border: 2px solid #ec6584; /* Change to your desired border color */
+}
+.selected-answer-label {
+	background-color: #ec6584;
+	padding: 5px;
+	border-radius: 5px;
+	color: #fff;
+}
+.next-button {
+	background-color: #0d2b4f;
+	font-size: 25px;
+	color: #fff;
+	height: 50px;
+	width: 200px;
+}
+.submit-button {
+	background-color: #ec6584;
+	font-size: 25px;
+	color: #fff;
+	height: 50px;
+	width: 200px;
+}
+.previous-button {
+	background-color: #0d2b4f30;
+	font-size: 25px;
+	height: 50px;
+	width: 200px;
+}
+.next-button:hover {
+	color: #fff !important;
+}
+.submit-button:hover {
+	color: #fff !important;
+}
+.previous-button:hover {
+	color: rgb(0, 0, 0) !important;
+}
+
+.landing-container {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	position: relative;
+	height: 100vh;
+	background-color: #f5f5f5;
+	padding: 20px;
+}
+/* margin top for mobiles only */
+
+@media only screen and (max-width: 768px) {
+	.mobile-margin-top {
+		margin-top: 15px;
+	}
+	.to-test-page-button {
+		position: absolute;
+		bottom: 5px !important;
+		right: 5px !important;
+	}
+}
+@media only screen and (min-width: 768px) {
+	.home-description-card {
+		min-height: 200px;
+	}
+}
+.home-description-card {
+	font-size: 20px !important;
+}
+.to-test-page-button {
+	position: absolute;
+	bottom: 40px;
+	right: 40px;
+}
+/* question-page */
+
+.question-page-question {
+	font-size: larger;
+	font-weight: 600;
+}
+.question-user-answer {
+	font-size: large;
 }
